Version 2.8 --> 2.9

* Fixed compile problem in Solaris 5.6 using cc

Version 2.7 --> 2.8

* aclocal.m4 was missing from the tar, resulting in
  a build failure if autoconf isn't installed.

Version 2.6 --> 2.7

* Support for aliases
* Configure/compile fix in the `tilde' directory.

Version 2.5 --> 2.6

* Doesn't depend on libreadline.a anymore.

Version 2.4 --> 2.5

* Fixed which-2.spec
* RPMs are now available from http://www.xs4all.nl/~carlo17/which