@@ -86,6 +86,9 @@ Stop processing options on the right if not on tty.
 .TP
 .B "\-\-version, \-v, \-V"
 Print version information on standard output then exit successfully.
+.TP
+.B "\-\-help"
+Print usage information on standard output then exit successfully.
 .SH RETURN VALUE
 .BR Which
 returns the number of failed arguments, or -1 when no
