@@ -1,6 +1,8 @@
 Version 2.8 --> 2.9
 
 * Fixed compile problem in Solaris 5.6 using cc
+* Added a `--help' option
+* RPMs now add a /etc/profile.d script, automatically setting a useful alias
 
 Version 2.7 --> 2.8
 
